--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DropdownMenuActivity"
+            android:exported="true">
+        </activity>
+        <activity android:name=".PersistentBottomSheetActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
